# pluribus

./: .gitmodules  CMakeLists.txt  MakeFile  Makefile  main.cpp
CMake/resolve_dependency_modules/: antlr4-runtime.cmake
docs/: add-velox-lib.md  notes.md
pluribus/: CMakeLists.txt  main.cpp
